# gemini-cli

./: .git_commit_message.txt  .gitignore  .gitmodules  Cargo.toml  INTERACTIVE-TASKS.md  PLANNING.MD  PLANNING.md  QUERY_FLOW.md  README.md  TASK.md  TASKS.md  UNIFIED_CONFIG.md  UNIFIED_CONFIG_REFACTOR_LOG.md  agent_orchestration_design.md  build-and-package-gemini.sh  current_resumption_task.md  daemon-logs.sh  dwim.sh  examples.md  fix_json.py  flake.nix  flow.py  install.sh  install_mcp_servers.sh  issue_for_parent_project_access.md  mcpd_wrapper_fixed.sh  mcpd_wrapper_patch.sh  new_task.md  npm-shrinkwrap.json  operational_plan_ooda.md  package.json  rebuild.sh  rebuild_cli.sh  rebuild_mcp_servers.sh  result  run-gemini.sh  tasks_and_directories_for_parent_project.md  test_node2nix_failure.nix  updated_servers.json  vibe_lattice_concept.md
.cursor/rules/: 01-project-overview.mdc  02-cli.mdc  03-mcp.mdc  04-memory.mdc  05-daemons-ipc.mdc  coding-style.mdc
.github/workflows/: rust.yml
HAPPE/: Cargo.toml
HAPPE/src/: main.rs
IDA/: Cargo.toml
IDA/src/: main.rs
cli/: Cargo.toml  README.md
cli/mcp-servers/: memory-store-mcp
cli/src/: app.rs  cli.rs  config.rs  happe_client.rs  history.rs  ipc_client.rs  logging.rs  main.rs  memory_broker.rs  output.rs  session_manager.rs  utils.rs
cli/src/memory/: mod.rs  types.rs
core/: Cargo.toml  README.md
core/src/: client.rs  config.rs  errors.rs  lib.rs  rpc_types.rs  types.rs
daemon-manager/: Cargo.toml  README.md
daemon-manager/src/: config.rs  daemon.rs  main.rs  mcp.rs
diagrams/: query_flow_circular  query_flow_radial_flow  query_flow_radial_positions
docs/memes/: zosloader.md
happe/: Cargo.toml  README.md
happe/src/: config.rs  coordinator.rs  http_server.rs  ida_client.rs  ipc_server.rs  lib.rs  llm_client.rs  mcp_client.rs
happe/src/session/: mod.rs  store.rs
happe/src/session/adapters/: in_memory.rs  mod.rs
ida/: Cargo.toml  README.md
ida/src/: config.rs  ipc_server.rs  lib.rs  llm_clients.rs  main.rs  memory_mcp_client.rs  storage.rs
install/: Cargo.toml
install/src/: main.rs
ipc/: Cargo.toml  README.md
ipc/src/: daemon_messages.rs  internal_messages.rs  lib.rs
ipc/src/happe_request/: mod.rs  types.rs
ipc/src/internal_messages/: mod.rs  types.rs
mcp/: Cargo.toml  README.md
mcp-servers/: command-mcp  filesystem-mcp  memory-mcp
mcp-servers-tmp/: command-mcp  embedding-mcp  filesystem-mcp  memory-store-mcp
mcp/src/: config.rs  gemini.rs  lib.rs  rpc.rs
mcp/src/host/: active_server.rs  io.rs  message_handler.rs  mod.rs  types.rs
mcp/src/servers/: command.rs  filesystem.rs  memory_store.rs  mod.rs
mcp_embedding_server/: README.md  requirements.txt  server.py  server.py.bak
memory/: Cargo.toml  README.md
memory/src/: arrow_conversion.rs  auto_memory.rs  broker.rs  config.rs  errors.rs  lib.rs  memory.rs  schema.rs  store.rs
nix/: packages.nix  shell.nix
python_mcp/: requirements.txt
python_mcp/servers/: base_server.py  command_mcp.py  filesystem_mcp.py  memstore.py
rust-vendor/rust-crate-searcher/: Cargo.toml  flake.nix  result
rust-vendor/rust-crate-searcher/src/: main.rs
rust-vendor/rust-vendor-lib/: Cargo.toml
scripts/: add-rust-dependencies.sh  generate-git-info.sh
src/: app.rs  auto_memory.rs  cli.rs  config.rs  history.rs  ipc_client.rs  logging.rs  main.rs  memory_broker.rs  model.rs  output.rs  utils.rs
src/mcp/: config.rs  gemini.rs  memory.rs  mod.rs  rpc.rs
src/mcp/host/: active_server.rs  io.rs  message_handler.rs  mod.rs  types.rs
src/mcp/servers/: command.rs  filesystem.rs  memory.rs  mod.rs
src/mcp/servers/command/: README.md  build.sh  main.rs
src/mcp/servers/filesystem/: README.md  build.sh  main.rs
src/mcp/servers/memory/: Cargo.toml  README.md  build.sh  main.rs
src/mcp/servers/memory_store/: main.rs  mod.rs
tests/: mcp_servers.json  requirements.txt
tests/mcp_server_tester/: Cargo.toml
tests/mcp_server_tester/src/: main.rs
tools/: Cargo.toml  generate_unified_config.rs
