[package]
name = "gemini-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
confy = "0.6"
dirs = "5.0"
base64 = "0.21"
colored = "2.1"
indicatif = "0.17"
pulldown-cmark = "0.9"
syntect = "5.1"
dialoguer = "0.11"
