[workspace]
resolver = "3"
members = [
    "cli",       # The original binary application
    "core",      # Core Gemini API interaction, structs, errors
    "mcp",       # MCP/Tool calling client logic
    "memory",    # Persistent memory storage logic
    "ipc",       # Inter-process communication definitions
    "ida",       # Internal Dialogue App daemon
    "happe",     # Host Application Environment daemon (Placeholder)
    "install",   # Installer crate for Gemini CLI Suite
    "daemon-manager", # CLI for managing gemini-suite daemons and MCP servers
    "tools",     # Tools for configuration, maintenance, etc.
    "tests/mcp_server_tester", # Test binary for MCP Python servers
]

[workspace.lints]
# Define workspace-wide lint settings here if needed

[workspace.dependencies]
# Define shared dependencies here
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
config = "0.14"
dotenvy = "0.15"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8.8"
dirs = "5.0"
log = "0.4"