[package]
name = "happe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipc = { path = "../ipc" }
# Add LLM interaction crate (e.g., reqwest, llm-chain)
# Add MCP client crate (if HAPPE needs to directly call MCP tools requested by LLM)
# Add core crate dependency
# core = { path = "../core" }

[[bin]]
name = "happe-daemon"
path = "src/main.rs" 