[package]
name = "ida"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipc = { path = "../ipc" }
# Add MCP client crate (as IDA needs to call Memory MCP Server tools)
# mcp = { path = "../mcp" }
# Add core crate dependency
# core = { path = "../core" }
# Add embedding generation crate (if IDA handles this)
# Add vector similarity search client (if needed beyond MCP calls)

[[bin]]
name = "ida-daemon"
path = "src/main.rs" 