[package]
name = "gemini-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
dotenv = "0.15"
dirs = "5.0"
colored = "2.1.0"
indicatif = "0.17"
pulldown-cmark = "0.9"
syntect = "5.1"
dialoguer = "0.11"
log = "0.4"
env_logger = "0.11"
uuid = { version = "1.6", features = ["v4"] }
ctrlc = "3.4.6"
diffy = "0.3"
anyhow = "1.0"
tracing = "0.1"
gemini-ipc = { path = "../ipc" }

[[bin]]
name = "gemini-cli"
path = "src/main.rs"

[[bin]]
name = "gemini-cli-bin"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.10"
