[package]
name = "daemon-manager"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing gemini-suite daemons and MCP servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gemini-core = { path = "../core" }
gemini-ipc = { path = "../ipc" }
gemini-mcp = { path = "../mcp" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
anyhow = "1.0"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
colored = "2.0"
which = "4.3"
fs_extra = "1.3"
regex = "1.8"

[[bin]]
name = "gemini-manager"
path = "src/main.rs" 