[package]
name = "gemini-happe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gemini-ipc = { path = "../ipc" }
gemini-core = { path = "../core" }
gemini-mcp = { path = "../mcp" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7" # For config file parsing
dirs = "5.0" # For finding config directories
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] } # For config/args
chrono = { version = "0.4", features = ["serde"] } # For timestamps if needed
anyhow = "1.0" # General error handling
reqwest = { version = "0.11", features = ["json"] } # For HTTP requests
axum = "0.6" # For HTTP server
tower = "0.4" # For HTTP server middleware
tower-http = { version = "0.4", features = ["cors"] } # For HTTP server CORS
async-trait = "0.1" # For async trait implementations
log = "0.4" # For logging
uuid = { version = "1.4", features = ["v4"] } # For session ID generation

[lints]
workspace = true

[[bin]]
name = "happe-daemon"
path = "src/bin/happe-daemon.rs" 