[package]
name = "ida"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use the actual package name defined in ipc/Cargo.toml
gemini-ipc = { path = "../ipc" }
gemini-core = { path = "../core" } # Required for unified config loading
gemini-mcp = { path = "../mcp", optional = true }   # Correct package name (assuming)
gemini-memory = { path = "../memory" }  # Added memory crate

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7" # For config file parsing
dirs = "5.0" # For finding config directories

# IPC Library (Using tokio's built-in for Unix sockets)
# If using interprocess or other lib, add it here.

# Configuration (Example using figment)
# figment = { version = "0.10", features = ["env", "toml"] }
clap = { version = "4", features = ["derive", "env"] } # Added for command-line argument parsing

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# Error Handling
anyhow = "1.0" # Keep anyhow for general error handling if needed
thiserror = "1.0" # For specific error types

# Other potential dependencies mentioned in README
# embedding generation crate (e.g., rust-bert, sentence-transformers)
chrono = { version = "0.4", features = ["serde"] } # For timestamps

# Added for direct LLM client implementation
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"

[[bin]]
name = "ida-daemon"
path = "src/bin/ida-daemon.rs"
required-features = ["gemini-mcp"]

[build-dependencies]
# ... existing code ... 