[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Add core crate dependency if types like ServerCapabilities are needed
gemini-core = { path = "../core" }
chrono = { version = "0.4", features = ["serde"] }