[package]
name = "gemini-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp-hostd"
path = "src/bin/mcp-hostd.rs"

[dependencies]
gemini-core = { path = "../core" }
gemini-memory = { path = "../memory" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "signal"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
futures-util = "0.3"
futures = "0.3"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = { workspace = true }
async-trait = "0.1"
os_info = "3.7"
ctrlc = "3.4.6"
hostname = "0.3"
diffy = "0.3"
jsonrpc-lite = "0.6.0"
env_logger = "0.10"
gemini-ipc = { path = "../ipc" }

[dev-dependencies]
tempfile = "3.8" 
