[package]
name = "gemini-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP implementation for Gemini CLI"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
gemini-core = { path = "../core" }
gemini-memory = { path = "../memory" }
gemini-ipc = { path = "../ipc" }
colored = "2.0"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
os_info = "3.7"
hostname = "0.3"
diffy = "0.3"
jsonrpc-lite = "0.6.0"
ctrlc = "3.4"

[[bin]]
name = "mcp-hostd"
path = "src/bin/mcp-hostd.rs"

[[bin]]
name = "filesystem-mcp"
path = "src/bin/filesystem-mcp.rs"

[[bin]]
name = "command-mcp"
path = "src/bin/command-mcp.rs"

[[bin]]
name = "memory-store-mcp"
path = "src/bin/memory-store-mcp.rs"

[dev-dependencies]
tempfile = "3.8" 
