[package]
name = "gemini-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
gemini-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
tracing = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
lancedb = "0.4"
tiktoken-rs = "0.5"
arrow-array = "51.0"
arrow-schema = "51.0"
futures = "0.3"
regex = "1.11.1"
async-stream = "0.3.6"
jsonrpc-lite = "0.6.0"

[dev-dependencies] 
