[package]
name = "gemini-suite-tools"
version = "0.1.0"
edition = "2021"
description = "Tools for Gemini Suite"
authors = ["James <james@example.com>"]

[[bin]]
name = "generate_unified_config"
path = "generate_unified_config.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
dirs = "4.0" 