[package]
name = "mcp_server_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# reqwest is likely not needed anymore if only testing stdio
# reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
# Add back gemini crates
gemini-mcp = { path = "../../mcp" }
gemini-core = { path = "../../core" } 