[package]
name = "memory-mcp"
version = "0.1.0"
edition = "2024"
authors = ["Gemini CLI Developers"]
description = "Memory MCP server for Gemini CLI"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[[bin]]
name = "memory-mcp"
path = "main.rs" 